fix alert to wrap text before close button

--- a/cdap-ui/app/styles/themes/cdap/theme.less
+++ b/cdap-ui/app/styles/themes/cdap/theme.less
@@ -35,6 +35,7 @@ body.theme-cdap {
   > div.alerts {
     div.alert {
       position: relative;
+      padding-right: 30px;
     }
     button.close {
       font-size: 30px;
